Fix overflow

--- a/src/Layouts/InApp/CreatePost/RatingInput/styles.scss
+++ b/src/Layouts/InApp/CreatePost/RatingInput/styles.scss
@@ -28,6 +28,7 @@
     }
   }
   & .combo-box-list {
+    width: min-content;
     bottom: calc(100% + 0.5em);
     --focus-background: #f3f3f3;
     @include Variables.comboBoxOutline(1.5px solid #29a9ff3f);
